# fastapi_demo_project

./: .env-test  .gitignore  README.md  alembic.ini  docker-compose.yml  hotels.py  main.py  makefile  pyproject.toml  pytest.ini  requirements.txt
src/: config.py  database.py  main.py
src/api/: auth.py  bookings.py  dependencies.py  facilities.py  hotels.py  rooms.py
src/migrations/: env.py
src/migrations/versions/: 2024_08_03_0039-ea977c719bba_make_email_unique.py  2026_02_07_1430-7de0fef6f25f_add_hotels_table.py  2026_02_07_1430-f2e735a5b5bc_add_rooms_table.py  2026_02_08_1814-bafdf4b7a86b_add_users_model.py  2026_02_08_2016-684a29d77e33_add_unique_constraint_in_emial_in_users_.py  2026_02_09_1259-e27ab3d71d08_add_booking_model.py  2026_02_10_1314-1460d32e9f43_add_facilities_model.py  5c42b6eb929a_initial_migration.py  e448adf63bfb_initial_migration.py
src/models/: bookings.py  facilities.py  rooms.py  users.py
src/repositories/: base.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py  utils.py
src/schemas/: bookings.py  hotels.py  rooms.py
src/services/: auth.py  bookings.py  hotels.py  rooms.py
src/tasks/: tasks.py
src/utils/: db_manager.py
tests/: conftest.py  mock_hotels.json  mock_rooms.json
tests/integration_tests/: test_auth.py
tests/integration_tests/auth/: test_api.py
tests/integration_tests/bookings/: test_api.py  test_db.py
tests/integration_tests/hotels/: test_api.py  test_db.py
tests/unit_tests/: test_auth.py
