[project]
name = "python-fastapi-course"
version = "0.1.0"
description = ""
authors = [
    {name = "sxd0",email = "fancityfun@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic (==1.18.3)",
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.12.1)",
    "asyncpg (==0.31.0)",
    "click (==8.3.1)",
    "fastapi (==0.128.0)",
    "greenlet (==3.3.1)",
    "h11 (==0.16.0)",
    "idna (==3.11)",
    "mako (==1.3.10)",
    "markupsafe (==3.0.3)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings (==2.12.0)",
    "pydantic-core (==2.41.5)",
    "python-dotenv (==1.2.1)",
    "sqlalchemy (==2.0.46)",
    "starlette (==0.50.0)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "uvicorn (==0.40.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "fastapi-redis (>=0.1.11,<0.2.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "pyright (>=1.1.408,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.1.0,<27.0.0)"
]

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 100
